--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "honohtmxmonorepo",
   "scripts": {
     "start:frontend": "cd packages/frontend && bun install && bun run start",
-    "start:backend": "cd packages/backend && bun install && bun run start:api",
+    "start:backend": "cd packages/backend && bun install && bun run start:test && bun run start:api",
     "start:doc": "cd packages/backend && bun install && bun run start:doc",
     "boot:app": "bun run concurrently \"bun:start:*\""
   },
