--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start:frontend": "cd packages/frontend && bun install && bun run start",
     "start:backend": "cd packages/backend && bun install && bun run start:test && bun run start:api",
     "start:doc": "cd packages/backend && bun install && bun run start:doc",
+    "start:ws": "cd packages/websocket && bun install && bun run start:ws",
     "boot:app": "bun run concurrently \"bun:start:*\""
   },
   "devDependencies": {
