--- a/packages/websocket/package.json
+++ b/packages/websocket/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start:ws": "bun run --watch index.ts"
   },
+  "dependencies": {
+    "backend": "workspace:*"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
