--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,17 +3,22 @@
   "scripts": {
     "start:api": "bun run --hot src/index.tsx",
     "start:doc": "bun run --hot src/openapi/index.tsx",
+    "start:migration": "bunx drizzle-kit generate:sqlite --schema src/db/schema.ts",
+    "start:migrate": "bun run src/db/migrate.ts",
+    "start:seed": "bun run src/db/seed.ts",
     "start:test": "bun test test/*.ts"
   },
   "dependencies": {
-    "hono": "^4.0.8",
     "@hono/swagger-ui": "^0.2.1",
     "@hono/zod-openapi": "^0.9.6",
-    "zod": "^3.22.4",
+    "drizzle-orm": "^0.30.1",
     "frontend": "workspace:*",
-    "shared": "workspace:*"
+    "hono": "^4.0.8",
+    "shared": "workspace:*",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.20.14"
   }
 }
