separate test database and dev database

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "start:frontend": "cd packages/frontend && rm -rf bun.lockb && bun install && bun run start",
-    "start:backend": "cd packages/backend && rm -rf bun.lockb && bun install && bun run start:test && bun run start:api",
+    "start:backend": "cd packages/backend && rm -rf bun.lockb && bun install && SCOPE=test bun run start:migration && SCOPE=test bun run start:migrate && SCOPE=test bun run start:seed && SCOPE=test bun run start:test && bun run start:api",
     "start:doc": "cd packages/backend && rm -rf bun.lockb && bun install && bun run start:doc",
     "start:ws": "cd packages/chat && rm -rf bun.lockb && bun install && bun run start:ws",
     "boot:app": "cd packages/backend && rm -rf bun.lockb && bun install && bun run start:migration && bun run start:migrate && bun run start:seed && cd ../../ && bun run concurrently \"bun:start:*\""
